@@ -1,3 +1,7 @@
+2011-02-06
+* implement priorities for scanning, get rid of looping over configuration for
+every scan, which was a bit silly.
+
 2011-02-04
 * add documentation for blacklisting
 * add blacklisting for individual program scans
